--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
       <div class="toolbarRight">
         <div class="syncStatus" id="syncStatus">Sincronización: <span class="muted">no configurada</span></div>
+        <button class="btn btnGhost" id="btnPull" title="Cargar datos actualizados desde GitHub">🔄 Cargar</button>
+        <button class="btn btnGhost" id="btnPush" title="Guardar cambios en GitHub">💾 Guardar</button>
         <button class="btn btnPrimary" id="btnAdd">➕ Agregar</button>
       </div>
     </section>
