--- a/index.html
+++ b/index.html
@@ -39,66 +39,9 @@
           <option value="Recibido en Estados Unidos">Recibido en Estados Unidos</option>
         </select>
 
-        <div class="tagFilters">
-          <label class="chip">
-            <input type="checkbox" id="tagPesoRaro" />
-            Peso/volumen raro
-          </label>
-          <label class="chip">
-            <input type="checkbox" id="tagInventario" />
-            Inventario
-          </label>
-          <label class="chip">
-            <input type="checkbox" id="tagEncargo" />
-            Encargo de cliente
-          </label>
-        </div>
+        <div class="tagFilters" id="tagFilters"></div>
       </div>
-
-      <div class="toolbarRight">
-        <div class="syncStatus" id="syncStatus">Sincronización: <span class="muted">no configurada</span></div>
-        <button class="btn btnGhost" id="btnPull" title="Cargar datos actualizados desde GitHub">🔄 Cargar</button>
-        <button class="btn btnGhost" id="btnPush" title="Guardar cambios en GitHub">💾 Guardar</button>
-        <button class="btn btnPrimary" id="btnAdd">➕ Agregar</button>
       </div>
-    </section>
-
-    <section class="stats" id="stats"></section>
-
-    <section class="list" id="list"></section>
-
-    <footer class="footer">
-      <div>Actualiza desde cualquier PC o móvil usando el mismo repo + token (no guardes tu token en GitHub).</div>
-      <div class="muted">Creador: <b>Brayan Raudales Tu Papi</b></div>
-    </footer>
-  </main>
-
-  <!-- LOGIN -->
-  <div class="modalBackdrop" id="loginBackdrop" aria-hidden="true">
-    <div class="modal loginModal" role="dialog" aria-modal="true" aria-labelledby="loginTitle">
-      <div class="modalHeader">
-        <div class="modalTitle" id="loginTitle">🔐 Iniciar sesión</div>
-      </div>
-      <div class="modalBody">
-        <p class="muted" style="margin-top:0">
-          Nota: En GitHub Pages no existe login “real” (no hay servidor). Esto es un candado visual para que no cualquiera use tu tablero.
-        </p>
-        <div class="grid2">
-          <div>
-            <label class="label">Usuario</label>
-            <input class="input" id="loginUser" autocomplete="username" />
-          </div>
-          <div>
-            <label class="label">Contraseña</label>
-            <input class="input" id="loginPass" type="password" autocomplete="current-password" />
-          </div>
-        </div>
-        <div class="row">
-          <button class="btn btnPrimary" id="btnLogin">Entrar</button>
-        </div>
-        <div class="error" id="loginError" style="display:none"></div>
-      </div>
-    </div>
   </div>
 
   <!-- SETTINGS -->
@@ -141,6 +84,36 @@
             <input class="input" id="ghToken" placeholder="ghp_..." />
           </div>
         </div>
+
+<div class="sectionBox">
+  <div class="sectionTitle">🏷️ Etiquetas (personalizables)</div>
+  <div class="muted small">Puedes agregar, renombrar y elegir color de fondo. Se usan en filtros, editor y WhatsApp/copiar.</div>
+
+  <div id="tagsManager" class="tagsManager"></div>
+
+  <div class="grid2" style="margin-top:10px;">
+    <div>
+      <label class="label">Emoji</label>
+      <input class="input" id="newTagEmoji" placeholder="🏷️" />
+    </div>
+    <div>
+      <label class="label">Nombre de la etiqueta</label>
+      <input class="input" id="newTagName" placeholder="Ej: Esperando generen tracking" />
+    </div>
+    <div>
+      <label class="label">Color</label>
+      <input class="input colorInput" id="newTagColor" type="color" value="#38bdf8" />
+    </div>
+    <div>
+      <label class="label">Clave (opcional)</label>
+      <input class="input" id="newTagKey" placeholder="auto" />
+    </div>
+  </div>
+
+  <div class="row" style="gap:10px; flex-wrap:wrap;">
+    <button class="btn btnGhost" id="btnAddTag" type="button">➕ Agregar etiqueta</button>
+  </div>
+</div>
 
         <details class="details">
           <summary>📌 Recomendado para el token (rápido)</summary>
@@ -211,56 +184,7 @@
 
           <div>
             <label class="label">Etiquetas</label>
-            <div class="tagPickers">
-              <label class="chip"><input type="checkbox" id="fTagPesoRaro" /> Peso/volumen raro</label>
-              <label class="chip"><input type="checkbox" id="fTagInventario" /> Inventario</label>
-              <label class="chip"><input type="checkbox" id="fTagEncargo" /> Encargo de cliente</label>
-            </div>
-          </div>
-
-          <div>
-            <label class="label">Total compra</label>
-            <input class="input" id="fTotal" placeholder="Ej: 120.50" />
-          </div>
-          <div>
-            <label class="label">Moneda</label>
-            <select class="select" id="fCurrency">
-              <option value="USD">USD</option>
-              <option value="HNL">HNL</option>
-            </select>
-          </div>
-
-          <div>
-            <label class="label">Método de pago</label>
-            <input class="input" id="fPayment" placeholder="Ej: Tarjeta / Transferencia / PayPal / Zelle" />
-          </div>
-          <div>
-            <label class="label">Notas (opcional)</label>
-            <input class="input" id="fNotes" placeholder="Ej: Llegó en 2 cajas / OJO peso raro" />
-          </div>
-        </div>
-
-        <div class="row" style="align-items:flex-start; gap:14px;">
-          <div style="flex:1">
-            <label class="label">Imágenes del producto (opcional)</label>
-            <div class="muted small">Se suben a tu repo (carpeta de imágenes). Si no hay token, se guardan solo local (no se sincronizan).</div>
-            <div class="fileActions">
-              <button class="btn btnGhost" id="btnPickImages" type="button">📁 Elegir archivos</button>
-              <button class="btn btnGhost" id="btnCameraImages" type="button">📷 Tomar fotos</button>
-              <span class="muted small">Tip: en PC puedes pegar imágenes con <b>Ctrl+V</b></span>
-            </div>
-            <input class="input hiddenFile" id="fImages" type="file" accept="image/*" multiple />
-            <input class="input hiddenFile" id="fImagesCamera" type="file" accept="image/*" capture="environment" multiple />
-            <div class="dropZone" id="pasteZone" tabindex="0">📋 Pega aquí (Ctrl+V) o arrastra y suelta imágenes</div>
-            <div class="imageGrid" id="imageGrid"></div>
-          </div>
-
-          <div class="metaBox">
-            <div><span class="muted">Creado:</span> <span id="metaCreated">—</span></div>
-            <div><span class="muted">Editado:</span> <span id="metaUpdated">—</span></div>
-            <div class="muted small" style="margin-top:8px">
-              Consejo: si aún no tienes tracking, deja vacío y usa “Esperando tracking”.
-            </div>
+            <div class="tagPickers" id="tagPickers"></div>
           </div>
         </div>
 
