--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Trackings USA • Dashboard</title>
   <meta name="description" content="Organización de trackings de paquetes (USA) con sincronización vía GitHub." />
   <link rel="stylesheet" href="styles.css" />
+  <!-- Color picker (paleta) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css" />
 </head>
 <body>
   <header class="topbar">
@@ -160,7 +162,11 @@
           </div>
           <div>
             <label class="label">Color de fondo</label>
-            <input class="input" id="newTagColor" type="color" value="#2d6cdf" />
+            <div class="colorField">
+              <button class="colorBtn" id="newTagColorBtn" type="button" aria-label="Elegir color"></button>
+              <input class="input" id="newTagColor" value="#2d6cdf" placeholder="#2d6cdf" />
+            </div>
+            <div class="muted small">Toca el cuadrito 🎨 o escribe HEX.</div>
           </div>
         </div>
 
@@ -177,6 +183,7 @@
         </div>
 
         <div class="hint muted" id="settingsHint"></div>
+        <div class="errorBox" id="settingsError" style="display:none"></div>
       </div>
     </div>
   </div>
@@ -312,6 +319,7 @@
     </div>
   </div>
 
+  <script defer src="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/pickr.min.js"></script>
   <script defer src="app.js"></script>
 </body>
 </html>
