--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Trackings USA • Dashboard</title>
   <meta name="description" content="Organización de trackings de paquetes (USA) con sincronización vía GitHub." />
-  <link rel="stylesheet" href="styles.css?v=11" />
+  <link rel="stylesheet" href="styles.css?v=14" />
 </head>
 <body>
   <header class="topbar">
@@ -19,6 +19,7 @@
 
     <div class="topbarActions">
       <button class="btn btnGhost" id="btnOpenSettings" title="Configurar GitHub / Token">⚙️ Config</button>
+      <button class="iconBtn" id="btnHardReload" title="Recargar página (forzar)">🔄</button>
       <button class="btn btnGhost" id="btnExport" title="Exportar respaldo JSON">⬇️ Exportar</button>
       <label class="btn btnGhost" title="Importar respaldo JSON">
         ⬆️ Importar
@@ -320,6 +321,6 @@
   </div>
 
   <script defer src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
-  <script defer src="app.js?v=13"></script>
+  <script defer src="app.js?v=14"></script>
 </body>
 </html>
