--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <input id="searchInput" class="input" placeholder="Buscar: título, tracking, método, notas..." />
         <select id="statusFilter" class="select">
           <option value="__all__">Todos los estados</option>
-          <option value="Esperando tracking">Esperando tracking</option>
-          <option value="Pendiente de seguimiento">Pendiente de seguimiento</option>
+          <option value="En Camino">En camino</option>
+          <option value="Perdido/Disputa/Proceso">Perdido/Disputa/Proceso</option>
           <option value="Recibido en Estados Unidos">Recibido en Estados Unidos</option>
         </select>
 
