--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
           <div>
             <label class="label">Estado</label>
             <select class="select" id="fStatus">
-              <option value="Esperando tracking">Esperando tracking</option>
-              <option value="Pendiente de seguimiento">Pendiente de seguimiento</option>
+              <option value="En camino">En camino</option>
+              <option value="Perdido/Disputa/Proceso">Perdido/Disputa/Proceso</option>
               <option value="Recibido en Estados Unidos">Recibido en Estados Unidos</option>
             </select>
           </div>
